# pythonprac

./: 1.py  2.py  make_urls.py  task_folder.py
20220913/1/: URLS
20220913/2/: URLS  prog.py
20220920/1/: URLS  prog.py
20220920/2/: URLS  prog.py
20220920/3/: URLS  prog.py
20220927/1/: URLS  prog.py
20220927/2/: URLS  prog.py
20220927/3/: URLS  prog.py
20221004/1/: URLS  prog.py
20221004/2/: URLS  prog.py
20221004/3/: URLS  prog.py
20221004/4/: URLS  prog.py
20221011/1/: URLS  prog.py
20221011/2/: URLS  prog.py
20221011/3/: URLS  prog.py
20221018/1/: URLS  prog.py
20221018/2/: URLS  prog.py
20221018/3/: URLS  prog.py
20221025/1/: URLS  prog.py
20221025/2/: URLS  prog.py
20221025/3/: URLS  prog.py
20221101/1/: URLS  prog.py
20221101/2/: URLS  prog.py
20221101/3/: URLS  prog.py
20221108/1/: URLS  prog.py
20221108/2/: URLS  prog.py
20221108/3/: URLS  prog.py
20221115/1/: URLS  prog.py
20221115/2/: URLS  prog.py
20221115/3/: URLS  prog.py
20221122/1/: URLS  prog.py
20221122/2/: URLS  prog.py
20230424/1/moodclient/: __main__.py  pyproject.toml
20230424/1/moodclient/MoodClient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
20230424/1/moodclient/moodclient/: __main__.py  client.py
20230424/1/moodserver/: __main__.py  pyproject.toml  server.pot  server.py
20230424/1/moodserver/MoodServer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
20230424/1/moodserver/moodserver/: __main__.py  moodserver.pot  server.py
20230424/1/moodserver/moodserver/translation/ru/LC_MESSAGES/: moodserver.mo  moodserver.po
20230424/1/moodserver/translation/ru/LC_MESSAGES/: server.mo  server.po
(+126 files in other folders)
